Allow collection edit
